# ai-walking-tour-guide

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  execute_tests.sh  main.py  pyproject.toml  pyrightconfig.json  sandbox.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 097ef995bbcf_add_voice_to_user_settings.py  2aacc14dfb97_add_user_settings_table.py  a1b2c3d4e5f6_add_fmt_to_user_settings.py  b3c4d5e6f7a8_add_suggestions_text_to_messages.py  c5d6e7f8a9b0_add_active_conversation_id.py  e7366e9fc97e_initial_schema.py
app/: api_controller.py  config.py  endpoints.py  models.py
app/agent/: agent_factory.py  function_runner.py  loop.py  prompt_builder.py
app/agent/models/: __init__.py  chat_models.py  models.py  utils.py
app/agent/tools/: city_tour_tool.py  dispatcher.py  google_places_search_tool.py  google_search_tool.py  image_gen_tool.py  registry.py
app/backend/: openrouter_client.py
app/db/: orm_models.py  repository.py  session.py
app/prompts/: architecture_expert.j2  cyberpunk.j2  dark_tourism.j2  deep_time.j2  fantasy_bard.j2  historian.j2  local_grandpa.j2  medieval_resident.j2  military_expert.j2  roman_empire.j2  storyteller.j2  system.j2  ww2_context.j2
app/telegram/: bot.py  handlers.py  tts.py  ui_strings.json
app/time_travel/: generator.py  image_gen.py  models.py  router.py
app/time_travel/templates/: index.html
app/utils/: dispatcher_utils.py  geocoder.py  geocoder_utils.py  llm_parser.py  llm_parser_utils.py  loop_utils.py  models_utils.py  registry_utils.py  retry_utils.py  tool_executor.py  tools_utils.py
tests/: conftest.py
tests/integration/: test_agent_factory.py
tests/unit/: test_dispatcher.py  test_kb_helpers.py  test_llm_parser.py  test_openrouter_client.py  test_prompt_builder.py  test_tool_registry.py
