[tool.poetry]
name = "solaris-pliny"
version = "0.1.0"
description = "Solaris Pliny — location-aware AI historian bot"
authors = ["Niko <nicolas.gordienko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.0"
openai = "^1.82.0"
python-dotenv = "^1.1.0"
jinja2 = "^3.1.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.50"}
aiosqlite = "^0.22.1"
alembic = "^1.18.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
