[tool.poetry]
name = "solaris-pliny"
version = "0.1.0"
description = "Solaris Pliny — location-aware AI historian bot"
authors = ["Niko <nicolas.gordienko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = "^2.10.0"
openai = "^1.82.0"
python-dotenv = "^1.1.0"
jinja2 = "^3.1.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.50"}
aiosqlite = "^0.22.1"
alembic = "^1.18.4"
aiogram = "^3.28.2"
google-genai = "^2.6.0"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.12"
staticmap = "^0.5.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.28.0"
ruff = "^0.15.14"
pre-commit = "^4.6.0"
pytest-asyncio = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 110
exclude = ["sandbox.py", "migrations/", "alembic/versions/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort (import order)
    "UP",  # pyupgrade (modernise syntax)
    "B",   # flake8-bugbear (common bugs)
    "N",   # pep8 naming
]
ignore = [
    "B008",  # function calls in default args (FastAPI/Pydantic pattern)
    "UP007", # use X | Y instead of Optional[X] — keep explicit Optional for clarity
]

[tool.ruff.lint.per-file-ignores]
# Prompt strings intentionally contain long lines
"app/time_travel/generator.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: real LLM API calls (requires OPENROUTER_API_KEY)",
]
